fix layout bug

--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -84,6 +84,7 @@ h1, h2 {
 }
 
 .loaderContainer {
+  text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
